# proiect_POO

./: .gitignore  CMakeLists.txt  README.md  Traffic_Arcade_Simulator_Documentatie.docx  build_and_run.sh
src/: entity_manager.cpp  entity_manager.h  game_state.cpp  game_state.h  main.cpp  ncurses_wrapper.cpp  ncurses_wrapper.h  rules_engine.cpp  rules_engine.h
